==> Embedfire-gps/ebf_module_gps_beidou_atgm332d/2-开发板配套例程/H743_繁星开发板/3.GPS_Decode_LCD-4.3寸/User/flash/bsp_spi_flash.c <==
#include "./flash/bsp_spi_flash.h"

void SPI_FLASH_Init(void)
{
   /*##-1- Configure the SPI peripheral #######################################*/
  /* Set the SPI parameters */
  SpiHandle.Instance               = SPIx;
  SpiHandle.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_16;
  SpiHandle.Init.Direction         = SPI_DIRECTION_2LINES;
  SpiHandle.Init.CLKPhase          = SPI_PHASE_2EDGE;
  SpiHandle.Init.CLKPolarity       = SPI_POLARITY_HIGH;
  SpiHandle.Init.CRCCalculation    = SPI_CRCCALCULATION_DISABLE;
  SpiHandle.Init.CRCPolynomial     = 7;
  SpiHandle.Init.DataSize          = SPI_DATASIZE_8BIT;
  SpiHandle.Init.FirstBit          = SPI_FIRSTBIT_MSB;
  SpiHandle.Init.NSS               = SPI_NSS_SOFT;
  SpiHandle.Init.TIMode            = SPI_TIMODE_DISABLE;
  
  SpiHandle.Init.Mode = SPI_MODE_MASTER;

  HAL_SPI_Init(&SpiHandle); 
  
  __HAL_SPI_ENABLE(&SpiHandle);     
}

uint8_t SPI_FLASH_SendByte(uint8_t byte)
{
  uint8_t r_byre = 0;
  
  HAL_SPI_TransmitReceive(&SpiHandle, &byte, &r_byre, 1, 1000);

  return r_byre;
}

uint16_t SPI_FLASH_SendHalfWord(uint16_t HalfWord)
{
  uint16_t r_hbyre = 0;
  
  HAL_SPI_TransmitReceive(&SpiHandle, (uint8_t *)&HalfWord, (uint8_t *)&r_hbyre, 2, 1000);

  return r_hbyre;
}
